# compare-qrels

./: README.md  compare_qrels.py  publish.sh  pyproject.toml  sample_compare_qrels.py  setup.cfg
output/: table.html
