[metadata]
name = compare-qrels
version = 0.0.1
author = Giguru Scheuer
author_email = giguru.scheuer@gmail.com
description = Qualitatively compare the qrels results of two IR systems.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/giguru/compare-qrels
project_urls =
    Bug Tracker = https://github.com/giguru/compare-qrels/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src